build and style footer, fix the alignment issues on body

--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,13 @@
-/* CSS GRID LAYOUT */
-    /* ADD MEDIA QUERY */
-
-* {
+ 
+/* * {
     border: 1px solid rgb(208, 67, 175);
 }
-    
+*/
 
 body {
-    background-color: black;
     margin: 0px;
     padding: 0px;
 } 
-
 
 .grid-container {
     display: grid;
@@ -29,14 +25,14 @@ body {
     z-index: -1;
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../images/theater-image-background.png");
     background-color: black;
-
-    width: 100%;
-    position: relative;
-    background-size: cover; 
-    margin-top: -50px;
-    /* height: 50%; 
     background-repeat: no-repeat;
-    min-height: 1000px; */
+    background-size: cover; 
+    /* width: 100%; */
+    /* position: ; */
+    /* display: block; */
+    /* height: 100%; 
+    /* margin-top: -10px; */
+    /* min-height: auto; */
 }
 
 .hero-text {
@@ -47,15 +43,6 @@ body {
     align-items: center;
     color: white;
     font-size: 3em;
-
-    /* text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 80px;
-    font-family:'Times New Roman', Times, serif */
 }
 
 /* NAV */
@@ -69,8 +56,6 @@ nav{
     position: fixed;
     top: 0px;
     height: 60px;
-    /* text-align: center; */
-    /* gap: 30px; */
 }
 
 .nav-container{
@@ -113,15 +98,12 @@ ul{
     height: 100%;
 }
 
-.nav-item a,
-.nav-logo a {
+a{
+    color: #fff;
     text-decoration: none;
-    color: white;
-    /* padding: 14px 20px; */
-    /* text-align: center; */
 }
 
-.nav-item a:hover {
+a:hover {
     color: rgb(125, 221, 231);
 }
 
@@ -130,117 +112,146 @@ ul{
 .main{
     width: 100%;
     height: 100%;
-    background-color: white;
-    /* display: flex;
+    margin-top: 40px;
+    margin-bottom: 40px;
+
+    display: flex;
     justify-content: center;
-    flex-direction: row; */
-    /* align-content: center; */
-    /* margin-top: 200px; */
-    padding: 50px;
+    background-color: white;
+    color: rgb(22, 22, 22);
 }
 
-/* .container-content{
-    padding: 40px;
-} */
+select{
+    width: 100%;
+    height: 40px;
+    /* will do the style later */
+}
 
 .content{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 30px;
-    border-bottom: 1px solid lightgray;
+    width: 100%;
+    border-bottom: 1px solid darkgray;
 }
 
-.img-content img{
+.images{
+    padding: 25px;
+}
+
+img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 80%; 
+    width: 100%; 
 }
 
-.info-content{
+.info{
     display: grid;
-    grid-template-rows: 10px 10px 10px 10px;
+    grid-template-rows: 5px 5px 5px 5px;
     grid-gap: 40px;
+    width: 80%;
 }
 
-    /* .searchbar > p{
-        background-color: red;
-        padding: 3px;
-    } */ 
+        /* button */
 
-        /* custom select   */
-        /* .custom-select{
-            padding: 2mm;
-            min-height: 50px;
-        }
+.btn-content{
+    display: flex;
+    align-items: center;
+}
 
-        .select-items div:hover, .same-as-selected {
-            background-color: rgb(54, 86, 89);
-        }
-
-        .select-selected {
-            background-color: rgb(54, 86, 89);
-        }
-
-        .select-selected:after {
-            position: absolute;
-            content: "";
-            top: 14px;
-            right: 10px;
-            width: 0;
-            height: 0;
-            border: 6px solid transparent;
-            border-color: #fff transparent transparent transparent;
-        }
-
-        .select-items {
-            position: absolute;
-            background-color: rgb(54, 86, 89);
-            top: 100%;
-            left: 0;
-            right: 0;
-            z-index: 99;
-        }
-
-        .select-selected.select-arrow-active:after {
-            border-color: transparent transparent rgb(54, 86, 89) transparent;
-            top: 7px;
-        } */
-
-    /* button */
 .button {
+    display: block;
+    width: 120px;
+    height: 50px;
     border: none;
     color: white;
     background-color: rgb(54, 86, 89);
-    padding: 15px 32px;
-    text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
     cursor: pointer;
 }    
-    /* add hover, selected, and other stuff's color
-    link the buttons */
 
-/* FOOTER */
-.footer{
-    display: flex;
-    background-color: black;
+.button:hover{
+    background-color: rgba(54, 86, 89, 0.845);
     color: #fff;
-    padding: 50px;
-    position: relative;
 }
 
-.footer-nav{
+.button:active{
+    background-color: rgba(54, 86, 89, 0.351);
+    color: rgb(22, 22, 22);
+
+}
+
+/* FOOTER */
+
+footer{
+    margin-bottom: 0px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.bottom{
+    width: 100%;
+    background-color: black;
+    color: #fff;
     display: flex;
+    flex-direction: row;
+    padding-top: 50px;
+    justify-content: space-evenly;
+}
+
+.f-map{
+    width: 20%;
+    text-align: center;
+    /* padding: 2%; */
+    /* padding-left: 100px; */
+}
+
+.f-info{
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    /* font: 1em; */
+}
+
+.f-shows{
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+}
+
+.f-social{
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+}
+
+.contact{
+    display: grid;
+    height: 20%;
+}
+
+.show{
+    display: grid;
+    height: 15%;
+}
+
+.media{
+    display: grid;
+    height: 15%;
 }
 
 #copyright{
-    background-color: black;
-    margin: 0px;
-    color: white;
-    font-size: 15pt;
+    background-color: rgb(0, 0, 0);
+    padding: 30px;
+    margin: auto;
+    color: rgb(255, 255, 255);
+    font-size: 10pt;
     text-align: center;
+}
+
+.tiny{
+    margin: 30px;
+    font-size: 10pt;
+
 }
